# actix-test-server

./: .env  Cargo.toml  run.sh
src/: main.rs
src/api/: mod.rs  post.rs  test.rs
src/repository/models/: post.rs
src/services/: post.rs
static/: index.html
