[package]
name = "actix-test-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
uuid = {version = "1.2.1", features=["v4", "serde"]}
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
dotenv = "0.15"
env_logger = "0.9.3"
log = "^0.4"
strum_macros = "^0.24"
strum = {version="^0.24", features = ["derive"]}
derive_more = "^0.99"